--- a/2_glass_manufacturing.tex
+++ b/2_glass_manufacturing.tex
@@ -124,8 +124,8 @@ During CMP, the slurry plays a crucial role at the interface between the wafer a
 \\
 Physical models have shown that in slurry with a size distribution of abrasive particles, only the larger particles make direct contact with the pad and the sample, leading to effective material removal [Effect of chemicals on CMP of glass substrates]. 
 
-\subsection{Side Effects of Polishing}
-\label{subsec:polishing_side_eff}
+\section{Side Effects of Polishing}
+\label{sec:polishing_side_eff}
 
 The uniformity of glass substrate surfaces in terms of index of refraction, chemical composition, and roughness is crucial in many different applications. However, during the manufacturing process, from rough grinding to fine polishing, nonuniform surfaces can arise. This is due, for example, to the presence of contaminants inside the glass, caused by residues of operating materials used during manufacturing as, most commonly, polishing agents.
 \\
@@ -145,3 +145,61 @@ during classical manufacturing of optical surfaces. }
 [taken by Gerhard app optics]
 \\
 As a result of these processes, visually clean polished glass surfaces can exhibit significant optically active contaminations [Gerhard et al Appl Opt 2017]. These contaminations may include surface adherent contaminants such as hydrocarbonaceous compounds and residues from polishing agents. The remaining silica gel layer and contaminants on the surface can also lead to negative effects such an increase in near-surface absorption consequently lowering the laser-induced damage threshold [Optics Manufacturing (Gerhard)].
+
+\section{Diffusion}
+\label{subsec:diff}
+
+As already mentioned in Chapter~\ref{sec:CMP}, diffusion is a core process in optics manufacturing; following is a brief exposition on the main characteristics of the mechanism.
+\\
+Diffusion is a physical and time dependent mechanism that drives the flow of particles from a low concentration portion of a medium to a high concentration one. The process is purely thermodynamical, the difference between the chemical potential, i.e. the potential associated with the concentration of particles, causes a difference between the Gibbs free energy of the two areas and leads to the flow of material in order to achieve equilibrium.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.5\textwidth]{chapter_2/diffiusion_upscaled.jpg}
+    \caption[]{Diffusion driven by the difference in concentration in the two compartments.}
+    \label{fig:diff_drawing}
+\end{figure}
+[taken by https://www.sciencedirect.com/topics/earth-and-planetary-sciences/molecular-diffusion]
+The simplest diffusion processes are called “normal” (or “Fickian”) and can be modelled by the two Ficks’s laws. 
+\\
+The first one is:
+\begin{align}
+    \vec{J}=-D\vec{\nabla}C \label{eq:first_law_3d}
+\end{align}
+Where the vectorial flow of particle $\vec{J}$ is proportional to the gradient of the concentration with a proportionality constant “$D$”, which is called diffusion coefficient. This coefficient, in general, will depend on both the substrate and the species diffusing into it, as well as on other external parameters like temperature and pressure. 
+\\
+It is very common to model diffusion processes one dimensionally, the first Fick’s law then becomes:
+\begin{align}
+    J=-D\frac{\partial C}{\partial x} \label{eq:first_law_1d}
+\end{align}
+Where we can clearly see that without any difference in concentration along x there is no flow of particles.
+\\
+The first law only describes the spatial dependence of the process. To also introduce the time dependency, it is necessary to also consider the second Fick’s Law, which states:
+\begin{align}
+   \frac{\partial C}{\partial t}=D\nabla^2C \label{eq:second_law_3d}
+\end{align}
+Under a 1-D approximation Equation~\ref{eq:second_law_3d} becomes:
+\begin{align}
+   \frac{\partial C}{\partial t}=D\frac{\partial^2C}{\partial x^2} \label{eq:second_law_1d}
+\end{align}
+Where the same proportionality constant D relates the concentration derivative with respect to time to its second spatial derivative.
+\\
+This partial differential equation can be solved by taking as boundary condition a fixed concentration $C_0$ at a certain value of $x$ (usually $x = 0$). This models a situation where a constant source of external diffusant is applied at one of the surfaces of a material.
+\\
+The solution of the equation, which is only valid for positive values of $x$, is:
+\begin{align}
+    C\left(x,t\right)=C_0\operatorname{erfc}\left(\frac{x}{2\sqrt{Dt}}\right) \label{eq:fick_solution}
+\end{align}
+Where $\mathrm{erfc}$ is the complementary of the error function and is defined as:
+\begin{align}
+   \operatorname{erfc}z=1-\frac{2}{\sqrt\pi}\int_{0}^{z}e^{-t^2}\ dt 
+\end{align}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = \textwidth]{chapter_2/plot_erfc.pdf}
+    \vspace*{-40pt}
+    \caption[]{Plot of the complementary error function.}
+    \label{fig:plot_erfc}
+\end{figure}
+
+The concentration at the source ($x = 0$) is $C_0$, in accordance with the boundary condition, decreases linearly for the region near the interface, and is followed by an exponential decay that goes to zero when we are too far from the source.
