--- a/Thesis.tex
+++ b/Thesis.tex
@@ -23,6 +23,10 @@
 \setlength\parindent{0pt} % Indentation
 \raggedbottom  
 
+\setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{3}
+
+
 % PACKAGES FOR TITLES
 \usepackage{titlesec}
 % \titlespacing{\section}{left spacing}{before spacing}{after spacing}
@@ -246,8 +250,8 @@ If necessary, an unnumbered chapter can be created by
 \chapter{Glass Manufacturing}
 \input{2_glass_manufacturing.tex}
 
-\chapter{Experimental Measurements}
-\input{3_experimental_measurements.tex}
+\chapter{Research Premises}
+\input{3_research_premises.tex}
 
 
 \chapter{Chapter one}
@@ -374,47 +378,9 @@ can contain multiple sub-figures with their own caption and label, e.g. \color{b
 \subsection{Tables}
 \label{subsec:tables}
 
-\begin{table}[H]
-\centering 
-\begin{tabular}{|l|c|c|}
-\hline
-                               & Unit   & \multicolumn{1}{l|}{Value Range} \\ \hline
-Water Temperature              & °C     & 5,9-16,7                                  \\ \hline
-PH Value                       &        & 7,7-8,2                                   \\ \hline
-Total alkaline earths          & mol/m³ & 1,4                                       \\ \hline
-Calcium                        & mg/l   & 40,1-42,5                                 \\ \hline
-Magnesium                      & mg/l   & 7,33-9,03                                 \\ \hline
-Sodium                         & mg/l   & 7,4-10,9                                  \\ \hline
-Potassium                      & mg/l   & 0,9-1,3                                   \\ \hline
-Chloride                       & mg/l   & 10,8-14,7                                 \\ \hline
-Nitrate                        & mg/l   & 14,9-19,3                                 \\ \hline
-Sulfate                        & mg/l   & 25-35                                     \\ \hline
-Phosphorus Compounds           & mg/l   & \textless{}0,1                            \\ \hline
-Silicon Compounds              & mg/l   & 5,0-7,4                                   \\ \hline
-Organically Bound Carbon (TOC) & mg/l   & 0,7-1,0                                   \\ \hline
-Aluminium                      & mg/l   & 0,02-0,03                                 \\ \hline
-Oxygen                         & mg/l   & 9,2-13,0                                  \\ \hline
-\end{tabular}
 
-    \label{table:water_composition}
-\end{table}
 
-\begin{table}[H]
-    \centering
-\begin{tabular}{|l|c|}
-\hline
-Chemical Name     & Concentration in Weight (\%) \\ \hline
-Aluminum Oxide    & 1 - 10                         \\ \hline
-Boron Oxide       & 10 - 20                        \\ \hline
-Calcium Oxide     & \textless 1                  \\ \hline
-Chlorine          & \textless 1                  \\ \hline
-Sodium Oxide      & 1 - 10                       \\ \hline
-Antimony Trioxide & \textless 1                  \\ \hline
-Silica            & 60 - 70                        \\ \hline
-Zinc Oxide        & 10 - 20                        \\ \hline
-\end{tabular}
-    \label{table:nzk7_concentration}
-\end{table}
+
 
 Within the environments \texttt{table} and  \texttt{tabular} you can create very fancy tables as the one shown in Table~\ref{table:example}.
 \begin{table}[H]
