--- a/2_glass_manufacturing.tex
+++ b/2_glass_manufacturing.tex
@@ -8,7 +8,7 @@ The manufacturing process of polished glass pieces typically begins with grindin
 Grinding too is a complex process, especially when applied to glass due to the nature of the material. The most used abrasive materials are silicon carbide or diamond grinding wheels [Grinding of Glass: the mechanics of the process *(GoG)*]. 
 \\
 Previous research shows that both permanent viscous flow and brittle fracture can occur during the grinding of glass surfaces. 
-Viscous flow is the main grinding mechanism when using silicon carbide. On the contrary, when using diamond grinding wheels, glass is grinded mostly through brittle fracture of particles from the surface.
+Viscous flow is the main grinding mechanism when using silicon carbide. On the contrary, when using diamond grinding wheels, glass is ground mostly through brittle fracture of particles from the surface.
 
 \subsection{Non-Newtonian Flow of Glass Particles}
 It is widely recognized that glass can be made to flow without fracturing under significant hydrostatic compressive stresses, even at ambient temperature [GoG]; this can happen because the local surface temperature in the grinding zone can easily exceeds the glass's softening point. The pressure conditions, favorable for the flow of glass, are also expected to exist at the cutting edge of an abrasive grain during grinding.
