--- a/3_research_premises.tex
+++ b/3_research_premises.tex
@@ -603,7 +603,7 @@ To reduce the amount of variable we had to control, we decided to fix the grindi
 Regarding polishing, expecting a dependence in the contaminants' concentration that was logarithmic/exponential with respect to time, we decided to take measurements not at fixed time intervals but instead to double the amount of time between each evaluation. From one minute to two hours of polishing.
 \\
 As a summary, the measurements were taken at: 
-Raw, grinded ($3\: min$), $1\: min$, $2\: min$, $4\: min$, $8\: min$, $15\: min$, $30\: min$, $1\: h$ and $2\: h$.
+Raw, ground ($3\: min$), $1\: min$, $2\: min$, $4\: min$, $8\: min$, $15\: min$, $30\: min$, $1\: h$ and $2\: h$.
 
 \subsection{Measurements of Polishing Components}
 \label{subsec:measurements_pol_components}
