finished the main draft with all the content

--- a/1_experimental_techniques.tex
+++ b/1_experimental_techniques.tex
@@ -379,7 +379,7 @@ The value of the contact angle is expected to be a characteristic property of a 
 \begin{align}
     \gamma_{SG} = \gamma_{SL} + \gamma_{LG} \cos\theta \label{eq:young_equation}
 \end{align}
-where /theta represents the measured contact angle, $/gamma_{LG}$, $/gamma_{SG}$ and $/gamma_{LS}$ respectively symbolize the liquid-vapor, solid-vapor and solid-liquid interfacial tensions.
+where $\theta$ represents the measured contact angle, $\gamma_{LG}$, $\gamma_{SG}$ and $\gamma_{LS}$ respectively symbolize the liquid-vapor, solid-vapor and solid-liquid interfacial tensions.
 \\
 The Young’s equation, though, is valid only under very strict conditions; the need of a rigid, flat, nonreactive, homogeneous, smooth, and nonporous solid surface makes clear that its applicability is not always extended to real, non-ideal, surfaces.
 \\
