added most of the content

--- a/3_research_premises.tex
+++ b/3_research_premises.tex
@@ -705,6 +705,8 @@ To ensure that the droplets were evaporated completely, the samples were put in 
 
 \subsection{XPS}
 \label{subsec:xps_setup}
+The XPS apparatus that measured our samples is a PHI VersaProbe II from Ulvac-phi. The model uses a monochromatic \ce{Al-K$\alpha$} source with a photon energy of $1486.6 \: eV$. The applied X-ray source has a power of 100 W.
+\\
 As explained in Chapter~\ref{sec:xps}, the XPS analysis is sensitive to just a few monolayers of the surface of the sample. To carry out depth resolved examinations, a small portion of the sample is removed from the surface with ion etching and consecutive measurements are conducted until the desired depth is reached.
 \\
 In our case, z-resolution was not one of the focuses of our research, so the XPS measurements were done only one time per sample, after surface cleaning had been performed with ion etching.
